<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".common.TripUniformInvoiceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/vat_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tripUniformInvoice_hint1" />

        <EditText
            android:id="@+id/invoiceTitle_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tripUniformInvoice_hint2" />

        <EditText
            android:id="@+id/receiver_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tripUniformInvoice_hint3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/city_spinner"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/countryside_spinner"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints="@string/cityspinner"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/darker_gray" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp"
                android:layout_weight="0.5"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <EditText
            android:id="@+id/street_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tripUniformInvoice_hint4" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:button="@drawable/radiobutton_background"
            android:paddingLeft="8dp"
            android:text="@string/tripUniformInvoice_radiobbutton"
            android:textColor="@color/contents_text" />
        <Button
            android:textColor="@color/maincolor"
            android:background="@drawable/shoppingcart_round2"
            android:text="@string/tripUniformInvoice_button"
            android:layout_width="match_parent"
            android:layout_height="25dp" />
    </LinearLayout>



</FrameLayout>