<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".common.DonationInvoiceFragment">


    <LinearLayout
        android:id="@+id/elecInvoice_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="5dp"
                android:button="@drawable/radiobutton_background"
                android:paddingLeft="8dp"
                android:text="@string/donationInvoice_Item1"
                android:textColor="@color/contents_text" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="5dp"
                android:button="@drawable/radiobutton_background"
                android:paddingLeft="8dp"
                android:text="@string/donationInvoice_Item2"
                android:textColor="@color/contents_text" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="5dp"
                android:button="@drawable/radiobutton_background"
                android:paddingLeft="8dp"
                android:text="@string/donationInvoice_Item3"
                android:textColor="@color/contents_text" />
        </RadioGroup>


    </LinearLayout>


</FrameLayout>