<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.AddCreditCardActivity">

    <include
        android:id="@+id/addcreditcard_toolbar"
        layout="@layout/toolbar" />

    <!--光標要在style 的pading 做調整-->
    <EditText
        android:autofillHints="AUTOFILL_HINT_CREDIT_CARD_NUMBER "
        android:id="@+id/cardnbr_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_rounde3"
        android:imeOptions="actionSearch"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:paddingLeft="20dp"
        android:text="@string/expire"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/add_year_spinner"
            style="@style/spinner_style1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginRight="4dp"
            android:layout_weight="0.5"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/add_month_spinner"
            style="@style/spinner_style1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.5"
            android:spinnerMode="dialog" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingLeft="20dp"
        android:text="@string/receiverAddress"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/cardowner_editext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounde3"
        android:hint="@string/creditOwner"
        android:singleLine="true"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/city_spinner"
            style="@style/spinner_style1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="0.5"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/countryside_spinner"
            style="@style/spinner_style1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="0.5"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <EditText
        android:id="@+id/street_editext"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounde3"
        android:hint="@string/tripUniformInvoice_hint4"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/finish_button"
            android:onClick="onclick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounde1"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>