<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.ShoppingCartActivity">

    <include
        android:id="@+id/shoppingcart_toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/shoppingCartDetail" />

        <TextView
            android:id="@+id/checkdeteal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/checkDetail"
            android:textColor="@color/maincolor" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <!--<com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView-->
        <!--android:id="@+id/shoppingcart_recycleview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/shoppingcart_recycleview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="總價 :"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="運費 :"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/total2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="總計 :"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="0.9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/price1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/shippingfee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="50"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/price2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="12sp" />
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginLeft="3dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_weight="0.85"-->
        <!--android:orientation="horizontal">-->


        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/continueShopping"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shoppingcart_round2"
                android:onClick="onclick"
                android:text="@string/continueShopping"
                android:textColor="@color/maincolor" />

            <Button
                android:id="@+id/shoppingComfirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shoppingcart_round_enable"
                android:onClick="onclick"
                android:text="@string/shoppingComfirm"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>